Update login.html for sign-up page enhancements

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <!-- !-- SETUP BOOTSTAP: link to Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <title>Skills Test</title>
+    <title>SIGN UP PAGE!</title>
 
     
     <style>
@@ -50,9 +50,6 @@
             background-color: rgb(117, 36, 50);
             border-radius: 8px;
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-            display: flex;
-            justify-content: center;
-            display: flex;
         }
 
     a {
@@ -156,4 +153,5 @@
 </div>
 
 </body>
+
 </html>
