--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
       <a class="navbar-brand" href="javascript:void(0)">
-      	<b style="color:  rgb(117, 36, 50);">Dragonfly Academy</b></span>
+      	<b style="color:  rgb(117, 36, 50);">Intrams S.Y. 25-26</b></span>
       </a>
 
 
@@ -129,4 +129,5 @@
 </div>
 
 </body>
+
 </html>
