--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
 
 
       <a class="navbar-brand" href="javascript:void(0)">
-      	<b style="color:  rgb(117, 36, 50);">Dragonfly Academy</b></span>
+      	<b style="color:  rgb(117, 36, 50);">Intrams S.Y. 25-26</b></span>
       </a>
 
 
@@ -155,3 +155,4 @@
 </body>
 
 </html>
+
