Change navbar title and format adjustments
Updated the navigation bar title and made minor formatting adjustments.

--- a/team.html
+++ b/team.html
@@ -70,7 +70,7 @@
 
 
       <a class="navbar-brand" href="javascript:void(0)">
-      	<b style="color:  rgb(117, 36, 50);">Dragonfly Academy</b></span>
+      	<b style="color:  rgb(117, 36, 50);">Intrams S.Y. 25-26</b></span>
       </a>
 
 
@@ -170,4 +170,5 @@
 </div>
 
 </body>
+
 </html>
