--- a/login.html
+++ b/login.html
@@ -116,9 +116,9 @@
             <br>
             <ul>
                 <li>Username must contain at least <b> 7 CHARACTERS</b></li>
-                <li>Password must contain at least <b> 1 letter</b></li>
+                <li>Password must contain at least <b> 1 UPPERCASE letter</b></li>
                 <li>Password must contain at least <b> 1 number</b></li>
-                <li>Username must contain at least <b> 10 CHARACTERS</b></li>
+                <li>Password must contain at least <b> 10 CHARACTERS</b></li>
             </ul>
         </details>
     </div>
@@ -155,4 +155,5 @@
 </body>
 
 </html>
+
 
