--- a/team.html
+++ b/team.html
@@ -11,7 +11,7 @@
     <!-- !-- SETUP BOOTSTAP: link to Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <title>Seatwork 2</title>
+    <title>team page</title>
 
     
     <style>
@@ -172,3 +172,4 @@
 </body>
 
 </html>
+
