--- a/login.html
+++ b/login.html
@@ -147,7 +147,7 @@
       <!-- FOOTER -->
 
     <center>
-	<footer class="mt-5 text-secondary"><b><a href="https://frangun.github.io/2Q-EX2_Dela-Cruz-F./">© 2025 Franzeska Dela Cruz | 10-E </a><br>
+	<footer class="mt-5 text-secondary"><b><a href="https://frangun.github.io/2Q-EX2_Dela-Cruz-F./">© 2025 Franzeska Dela Cruz | 10-E </a><a href="https://github.com/TCoeli-10E">© 2025 Thomas Taylor L Coeli | 10-E </a><br>
 	</center>
 
 </div>
@@ -155,5 +155,6 @@
 </body>
 
 </html>
+
 
 
