Fix HTML formatting and add footer links

--- a/team.html
+++ b/team.html
@@ -164,7 +164,7 @@
       <!-- FOOTER -->
 
     <center>
-	<footer class="mt-5 text-secondary"><b><a href="https://frangun.github.io/2Q-EX2_Dela-Cruz-F./">© 2025 Franzeska Dela Cruz | 10-E </a><br>
+	<footer class="mt-5 text-secondary"><b><a href="https://frangun.github.io/2Q-EX2_Dela-Cruz-F./">© 2025 Franzeska Dela Cruz | 10-E </a><a href="https://github.com/TCoeli-10E">© 2025 Thomas Taylor L Coeli | 10-E </a><br>
 	</center>
 
 </div>
@@ -172,4 +172,5 @@
 </body>
 
 </html>
+
 
